[package]
name = "mycelium-lsp"
version.workspace = true
description = "Minimal toolchain surface (FR-S5): invariant linter (M-141), canonical formatter (M-142), and the LSP feedback facade (M-140/M-221) — one surface for diagnostics, swap certificates, bound/guarantee annotations, lowering-stage dumps, and selection EXPLAIN traces."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
# The EXPLAIN surfacing (M-221; SC-5): the facade re-derives selection explanations from a
# PolicyRegistry so "why was this representation chosen?" is answerable in-editor (RFC-0005 §4).
mycelium-select = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
# Document sync (M-310): the text → Node pipeline (parse → check → elaborate) the LSP server runs on
# `didOpen`/`didChange`. The L1 surface prototype, now that RFC-0011 r3 / RFC-0001 r4 are enacted.
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "cd32a1ed7ab7d2be38c9c3047da7318d182b7a1c" }
# M-359 project metadata: the structured nodule header + manifest + inheritance, so the linter can
# check the header (unknown key / bad SPDX / non-ISO date = explicit error, G2). Above the kernel (KC-3).
mycelium-proj = { git = "https://github.com/tzervas/mycelium-proj", rev = "cfc934b32c0b7b57becbb7ddfe3c516712c6ec0e" }
# The LSP wire protocol (M-310): JSON-RPC 2.0 framing + LSP-shaped diagnostics over stdio. The same
# pinned serde_json the rest of the workspace uses (mycelium-core/-cert/-select/...).
serde_json.workspace = true
# M-345 / RFC-0013 structured diagnostics: the diagnostic record + reified error-handling policy
# derive (de)serialization for the dual human/JSON projection (G11) and the file-as-projection of the
# canonical content-addressed declaration (RFC-0013 §4.7). Same pinned serde the workspace uses.
serde.workspace = true
# Content-addressing the diagnostic record + policy (RFC-0013 §4.3/§4.4; ADR-003) — the same BLAKE3
# the kernel uses for `ContentHash`, here in the tooling layer (no kernel dependency added; KC-3).
blake3.workspace = true
# RFC-0041 §4.7 W1: the shared recursion-budget + guarded-stack leaf, so `llm_canonical`'s
# post-elaboration `Node` render runs on a grown host stack instead of SIGABRT-ing the LSP server on
# a deep editor buffer (RR-29 guard-hole census).
mycelium-workstack = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }

# M-330 co-authoring loop: the stdin→publishDiagnostics shim used by coauthor.py.
[[example]]
name = "check"
path = "examples/check.rs"

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-lsp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
