[package]
name = "mycelium-lsp"
version.workspace = true
description = "Minimal toolchain surface (FR-S5): invariant linter (M-141), canonical formatter (M-142), and the LSP feedback facade (M-140/M-221) — one surface for diagnostics, swap certificates, bound/guarantee annotations, lowering-stage dumps, and selection EXPLAIN traces."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "46d2515cbd86d2ae4d1365f4adcd2796737e9f0b" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
# The EXPLAIN surfacing (M-221; SC-5): the facade re-derives selection explanations from a
# PolicyRegistry so "why was this representation chosen?" is answerable in-editor (RFC-0005 §4).
mycelium-select = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
# Document sync (M-310): the text → Node pipeline (parse → check → elaborate) the LSP server runs on
# `didOpen`/`didChange`. The L1 surface prototype, now that RFC-0011 r3 / RFC-0001 r4 are enacted.
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "2b92f54349eb0d4f67e32e983874df76908b9ab6" }
# M-359 project metadata: the structured nodule header + manifest + inheritance, so the linter can
# check the header (unknown key / bad SPDX / non-ISO date = explicit error, G2). Above the kernel (KC-3).
mycelium-proj = { git = "https://github.com/tzervas/mycelium-proj", rev = "20b8a6d264ac728e81cfe8cd90cec8d2a91370be" }
# The LSP wire protocol (M-310): JSON-RPC 2.0 framing + LSP-shaped diagnostics over stdio. The same
# pinned serde_json the rest of the workspace uses (mycelium-core/-cert/-select/...).
serde_json.workspace = true
# M-345 / RFC-0013 structured diagnostics: the diagnostic record + reified error-handling policy
# derive (de)serialization for the dual human/JSON projection (G11) and the file-as-projection of the
# canonical content-addressed declaration (RFC-0013 §4.7). Same pinned serde the workspace uses.
serde.workspace = true
# Content-addressing the diagnostic record + policy (RFC-0013 §4.3/§4.4; ADR-003) — the same BLAKE3
# the kernel uses for `ContentHash`, here in the tooling layer (no kernel dependency added; KC-3).
blake3.workspace = true
# RFC-0041 §4.7 W1: the shared recursion-budget + guarded-stack leaf, so `llm_canonical`'s
# post-elaboration `Node` render runs on a grown host stack instead of SIGABRT-ing the LSP server on
# a deep editor buffer (RR-29 guard-hole census).
mycelium-workstack = { git = "https://github.com/tzervas/mycelium-core", rev = "46d2515cbd86d2ae4d1365f4adcd2796737e9f0b" }

# M-330 co-authoring loop: the stdin→publishDiagnostics shim used by coauthor.py.
[[example]]
name = "check"
path = "examples/check.rs"

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-lsp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
